tests/fixtures/valid/expressions/preference_precedence.pine
//@version=6
indicator("Precedence")
x = open + high * 2 - low / 3
plot(x)
