tests/fixtures/invalid/semantic/redeclaration_same_scope.pine
//@version=6
indicator("Bad")
x = 1
x = 2
